# Phase4-TodoApp

./: $null  .env.example  README.md  docker-compose.yml  run_api.py  run_api_no_reload.py  test_chat_fix.py  test_imports.py  test_imports_no_db.py  validate_deployment.sh
backend/: .gitignore  Dockerfile  README.md  __init__.py  deploy_staging.py  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/database/: optimization.py
backend/app/middleware/: auth.py  exception_handlers.py
backend/app/models/: base.py  category.py  conversation.py  message.py  tag.py  task.py
backend/app/routes/: chat.py
backend/app/schemas/: chat.py  conversation.py  error.py  message.py  task.py
backend/app/services/: agent_service.py  conversation_service.py  database.py  message_service.py  task_enhanced_service.py  task_service.py
backend/app/utils/: auth.py  backup_recovery.py  conversation_builder.py  exceptions.py  input_validation.py  logging.py  performance.py  security.py  shutdown.py  (+3 more)
backend/docs/: api_documentation.md
backend/mcp/: config.py  server.py  utils.py
backend/models/: __init__.py  conversation.py  message.py
backend/routers/: health.py
backend/services/: __init__.py  chat_service.py  task_service.py
backend/src/: main.py
backend/tests/: conftest.py  test_auth.py  test_authentication.py  test_authorization.py  test_chat_endpoint.py  test_config.py  test_conversation_flow.py  test_database.py  test_final_integration.py  test_mcp_integration.py  test_schemas.py  test_task_management.py  test_tool_logging.py
(+95 files in other folders)
